--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.datasource.password=${DB_PASS}
 
 spring.jpa.show-sql=true
 
-# (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto=update
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+logging.level.org.flywaydb=error
