--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
 spring.application.name=BeBSystem
 
-
 spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 
-# Flyway Configuration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
-
-logging.level.org.flywaydb=error
